# volco

./: .gitignore  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-style.yml
scripts/: run-getstate.sh  run-pattern-backup.sh  run-refresh.sh
src/volco/: app.py  constants.py  controller.py  mixcloud_scraper.py  models.py  renderer.py  sc_client_id.py  scraper.py  tracklist.py  updater.py  volumio_controller.py  volumio_models.py  volumio_scraper.py
static/: style.css
templates/: index.html  list.html  patterns.html
