[project]
name = "volco"
version = "0.1.0"
description = ""
authors = [{ name = "Ondrej Zacha", email = "zachaondrej@gmail.com" }]
requires-python = ">=3.10, <3.12"
dependencies = [
    "httpx>=0.23.1,<0.24",
    "fastapi==0.97",
    "uvicorn>=0.20.0,<0.21",
    "socketIO-client>=0.7.2,<0.8",
    "pydantic>=1.10.15,<2",
    "python-multipart>=0.0.5,<0.0.6",
    "Jinja2>=3.1.2,<4",
    "requests==2.31.0",
    "pygments==2.15.0",
]

[project.scripts]
refresh = "volco.updater:main"

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.ruff]
target-version = "py311"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules
select = [
    "E",  # pycodestyle, generic rules
    "F",  # Pyflakes, generic rules
    "B",  # bugbear - best practices
    "I",  # isort
    "RUF100",  # unused noqa 
    "ARG",  # unused arguments
    "T20",  # no print() statements
    "UP",  # upgrade to latest Python features
    "W505",  # comment/docstring line length
]
ignore = [
    "E501",  # line length handled by ruff format
]
